refactor: strongly type foodstuff metadata schemas
